crates/toml/tests/snapshots/invalid/datetime/month-under.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2007-00-01T00:00:00-00:00
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
invalid date, expected month between 01 and 12
